muda a cor do botao

--- a/style.css
+++ b/style.css
@@ -33,3 +33,7 @@
         #img-align {
             text-align: center;
         }
+
+        .button:hover{
+            background-color: rgb(70, 61, 122)
+        }
