arruma fotos e muda lista

--- a/style.css
+++ b/style.css
@@ -30,8 +30,12 @@
             text-align: center;
         }
 
-        #img-align {
+        #profile-pic{
+
             text-align: center;
+            float: left;
+            margin-right: 20px;
+
         }
 
         .button:hover{
